<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joaos.virtualhelper.activity.ObraDetalhadaActivity">

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="214dp"
        android:src="@mipmap/ic_container"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:visibility="invisible"
        android:id="@+id/fbContainer"
        app:backgroundTint="@color/azul_base"
        />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="144dp"
        android:src="@mipmap/ic_tags"
        android:elevation="6dp"
        android:id="@+id/fbTags"
        app:pressedTranslationZ="12dp"
        android:visibility="invisible"
        app:backgroundTint="@color/azul_base"
        />


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="60dp"
        android:src="@mipmap/ic_action_plus"
        android:elevation="3dp"
        app:pressedTranslationZ="12dp"
        android:id="@+id/fbMain"
        app:backgroundTint="@color/colorPrimary"
        />

    <LinearLayout
        android:id="@+id/activity_obra_detalhada"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ImageViewCapa"
                />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewTitulo"
                    style="@style/textView_custom"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewAutor"
                    style="@style/textView_custom"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewIsbn"
                        style="@style/textView_custom"
                        />
                    <ImageButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/ImageButtonScanner"
                        android:onClick="scannerIsbn"
                        android:src="@mipmap/ic_camera"
                        android:background="@android:color/transparent"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewAno"
                    style="@style/textView_custom"
                />
                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBoxEmprestado"
                    android:id="@+id/CheckBoxEmprestado"
                    app:buttonTint="@color/colorPrimary"
                />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewBreveDesc"
                style="@style/textView_custom"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewConteiner"
                style="@style/textView_custom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                style="@style/textView_custom"
                />
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- input das tags como textview via codigo usando o
                    style = tag_style-->

                </LinearLayout>

            </HorizontalScrollView>


        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonConcluir"
                android:text="@string/buttonConcluir"
                android:onClick="obraDetalhadaConcluir"
                style="@style/buttonTheme"
                />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonCancelar"
                android:text="@string/buttonCancelar"
                android:onClick="obraDetalhadaCancelar"
                style="@style/buttonTheme"
                />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>